--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
      display: flex;
      justify-content: center;
      align-items: center;
-     height: 100%;
+     height: 120vh;
      background-color: #282c34;
      color: white;
      transition: background-color 0.7s ease;
